--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,11 @@
 	text-align: center;
 	font-size: 30px;
 	position: absolute;
-	bottom: 1px;
+	bottom: 13px;
 	width: 100%;
 	color: #FFF;
 	font-weight: bold;
+	text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.58);
 }
 
 .store_fname {
@@ -130,6 +131,7 @@ article, aside, figure, figcaption, footer, header, hgroup, nav, section, summar
 
 html {
 	overflow-y: scroll;
+	overflow-x: hidden;
 	height: 100%;
 	/*background: url(../images/183357310.jpg) repeat;*/
 	background: url(../images/311387369.jpg) repeat fixed left top;
@@ -149,8 +151,29 @@ body {
 #header {
 	background-color: #A7CFF0;
 	/*border: 2px solid blue;*/
-	height: 60px;
+	height: 90px;
 	position: relative;
+
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c2dbef+0,a7cff0+33,a7cff0+66,c2dbef+100 */
+	/*background: -webkit-gradient(linear, left top, right top, color-stop(0%,#c2dbef), color-stop(33%,#a7cff0), color-stop(66%,#a7cff0), color-stop(100%,#c2dbef)); *//* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left,  #c2dbef 0%,#a7cff0 33%,#a7cff0 66%,#c2dbef 100%); /* Chrome10+,Safari5.1+ */
+	/*background: linear-gradient(to right,  #c2dbef 0%,#a7cff0 33%,#a7cff0 66%,#c2dbef 100%); *//* W3C */
+}
+
+/*-------------------------------------------------------------------------------------*/
+.back_menu, .back_head {
+	height: 31px;
+	position: absolute;
+	left: -1000px;
+	width: 1000%;
+}
+.back_head {
+	background: #C2DBEF;
+	height: 90px;
+}
+.back_menu {
+	box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.5);
+	background-color: #FFFFF5;
 }
 
 /*------------------------ header -------------------*/
