--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ html {
 	overflow-x: hidden;
 	height: 100%;
 	/*background: url(../images/183357310.jpg) repeat;*/
-	background: url(../images/311387369.jpg) repeat fixed left top;
+	background: url(../images/bg6.jpg) repeat fixed left top;
 }
 
 body {
