--- a/css/menu.css
+++ b/css/menu.css
@@ -16,7 +16,7 @@ nav {
 	/*border-bottom: 2px solid #2828FB;*/
 	/*background: white url(bg.gif) repeat-x left top;*/
 	background: #FFFFF5;
-	z-index: 123;
+	z-index: 3;
 	position: relative;
 }
 
@@ -113,6 +113,7 @@ nav {
 	list-style: none;
 	padding: 5px 15px 5px 10px;
 	border-radius: 5px;
+	border-radius: 0 0 5px 5px;
 	/*display: none;*/
 	opacity: 0;
 	visibility: hidden;
