--- a/css/main.css
+++ b/css/main.css
@@ -133,9 +133,10 @@ html {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	height: 100%;
+	/*min-height: 100%;*/
 	/*background: url(../images/183357310.jpg) repeat;*/
 	background: url(../images/bg6.jpg) repeat fixed left top;
-	box-shadow: inset 0 0 60px -20px;
+	/*box-shadow: inset 0 0 60px -20px;*/
 }
 
 body {
@@ -148,6 +149,7 @@ body {
 	/*width: 1100px;*/
 	min-height: calc(100% - 50px);
 	padding-bottom: 50px;
+	box-shadow: inset 0 0 60px -20px;
 }
 
 .body_wrapper {
@@ -179,7 +181,7 @@ body {
 .back_head {
 	background: #C2DBEF;
 	height: 90px;
-	z-index: -2;
+	/*z-index: -2;*/
 }
 .back_menu, .back_menu2 {
 	height: 31px;
@@ -226,6 +228,7 @@ body {
 	background: #616161;
 	border-top: 2px solid gray;
 	bottom: 0px;
+	box-shadow: 0 20px 60px 0px;
 }
 
 /*.back_footer:before,*/
