--- a/css/main.css
+++ b/css/main.css
@@ -105,8 +105,12 @@
 	margin-top: -150px;
 	margin-left: -150px;
 }
-
-#overlay {
+.ui-widget-overlay {
+	background: #000 !important;
+	opacity: 0.5 !important;
+	/*background: none repeat scroll 0% 0% rgb(0, 0, 0) ;*/
+}
+#overlay  {
 	display: none;
 	position: fixed;
 	top: 0;
@@ -184,7 +188,7 @@ body {
 	/*z-index: -2;*/
 }
 .back_menu, .back_menu2 {
-	height: 31px;
+	height: 32px;
 	background-color: #FFFFF5;
 	top: 90px;
 	border-bottom: 1px solid #D7D7D0;
@@ -271,7 +275,7 @@ body {
 	border-bottom: 1px solid #868686;
 }
 #content, #content2 {
-	margin-top: 8px;
+	margin-top: 12px;
 	/*--border: 1px solid gray;
 	--position: absolute;
 	--top: 184px;
@@ -290,13 +294,34 @@ body {
 	/*z-index: -3;*/
 }
 #content ul, #content2 ul {
-	margin-left: 30px;
+	margin: auto;
+	width: 540px;
 }
 
 #content ul > li {
-	padding: 5px;
+	/* padding: 15px; */
+	list-style: none;
+	/*border: 1px solid #FA6F6F;*/
+	width: 215px;
+	display: inline-block;
+	margin: 25px;
+	text-align: center;
+	/* border-radius: 5px; */
 }
 
+#content ul > li > a {
+	border-radius: 5px;
+	display: block;
+	border: 1px solid #C5B758;
+	padding: 15px;
+	text-decoration: none;
+	color: #0002A6;
+	box-shadow: 1px 2px 0px #AE7700;
+}
+#content ul > li > a:hover {
+	background-color: #FFFAA0;
+	border: 1px solid #bcbcbc;
+}
 #content2 {
 	margin-left: 220px;
 }
@@ -386,7 +411,23 @@ body {
 /*-----------------------*/
 #feedback {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: 3px;
+	right: 7px;
 	display: block;
+}
+
+/*----------------------------------------*/
+.delemiter {
+	height: 23px;
+	/*background: #000;*/
+	width: 1086px;
+	background: url(../images/bg6.jpg) repeat fixed left top;
+	margin: 20px 0;
+	margin-left: -5px;
+	box-shadow: inset 0 0 40px -10px;
+
+	border-bottom: 1px inset #E7E7E7;
+	border-right: 1px inset #E7E7E7;
+	border-left: 1px inset #CDCDCD;
+	border-top: 1px inset #CDCDCD;
 }
