карточка товара. Реестр цен. мелкие изменения.

--- a/css/print/delivery.css
+++ b/css/print/delivery.css
@@ -29,13 +29,13 @@ table.spec2 td {
 	/*page-break-after:always*/
 }
 .page.deliverynote {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 
 	width: 283mm;
 	height: 192mm;
 }
 .deliverynote.p1 {
-	margin-left: 15mm;
+	/*margin-left: 15mm;*/
 	padding-right: 0mm;
 }
 .deliverynote.p2 {
