--- a/css/print/report.css
+++ b/css/print/report.css
@@ -1,9 +1,14 @@
 table {
 	border-collapse: collapse;
-	white-space: nowrap;
 	/*font-size: 10px;*/
 	width: 100%;
 	font-size: 10px;
+}
+th {
+	white-space: normal;
+}
+td {
+	white-space: nowrap;
 }
 .report_title {
     font-size: 1.3em;
@@ -17,6 +22,7 @@ table {
 }
 th, td {
 	border: 1px solid gray;
+	padding: 2px 5px;
 }
 
 
@@ -35,6 +41,9 @@ table.no_border td, tr.no_border td, td.no_border, table.no_border tr.no_border 
 	border: none;
 }
 
+col.r {
+	text-align: right;
+}
 .itog {
 	font-weight: bold;
 }
@@ -57,7 +66,21 @@ table.no_border td, tr.no_border td, td.no_border, table.no_border tr.no_border 
 }
 
 /*-------------------------------------------------------------------------------------------------------------------*/
-
+body {
+	/*background-color: #bcbcbc;*/
+}
+.page {
+	margin: auto;
+	background-color: #fff;
+}
+.page.l {
+	width: 290mm;
+	/*height: 210mm;*/
+}
+.page.p {
+	width: 210mm;
+	/*height: 290mm;*/
+}
 /*-------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------------------------------*/
