--- a/css/store/expence.css
+++ b/css/store/expence.css
@@ -203,6 +203,9 @@ label {
 }
 
 /*-------------------------------------------------------*/
+.page_caption {
+	text-align: right;
+}
 details.additional_data {
 	/*position: absolute;*/
 	margin: -10px 12px 12px 12px;
@@ -224,4 +227,34 @@ details label {
 }
 .docadditional .row {
 	padding: 5px;
+}
+
+/*----------------------------------------------------------------------------------------------*/
+.ui-dialog {
+	padding: 0 !important;
+}
+.ui-dialog .ui-dialog-titlebar {
+	padding: 0 !important;
+	text-align: center;
+}
+.ui-dialog .ui-dialog-title {
+	float: none !important;
+	/*margin: .1em 16px .1em 0;*/
+}
+.ui-dialog .ui-dialog-buttonpane {
+	padding: 0 !important;
+}
+.ui-button {
+	display: inline-block;
+	position: relative;
+	padding: 0;
+	margin-right: .1em;
+	cursor: pointer;
+	text-align: center;
+	zoom: .8 !important;
+	overflow: visible;
+}
+
+.ui-dialog label {
+	width: 180px;
 }
