убрал пэйдж брекер в печати в стилях

--- a/css/print/delivery.css
+++ b/css/print/delivery.css
@@ -31,8 +31,8 @@ table.spec2 td {
 .page.deliverynote {
 	/*border: 1px solid red;*/
 
-	width: 283mm;
-	height: 192mm;
+	/*width: 283mm;*/
+	/*height: 192mm;*/
 }
 .deliverynote.p1 {
 	/*margin-left: 15mm;*/
