--- a/css/help.css
+++ b/css/help.css
@@ -94,7 +94,7 @@ article, aside, figure, figcaption, footer, header, hgroup, nav, section, summar
 html {
     height:100%;
     /*background: url(../images/183357310.jpg) repeat;*/
-    background: url(../images/311387369.jpg) repeat;
+    background: url(../images/bg6.jpg) repeat;
 }
 body {
         /*text-align: center;*/
