--- a/css/store/importsetup.css
+++ b/css/store/importsetup.css
@@ -1,13 +1,13 @@
-table caption {
-	font-weight: bold;
-}
 table {
 	width: 500px;
-	margin: auto;
-	border-collapse: collapse;
-	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
-table td {
-	border: 1px solid #bcbcbc;
-	padding: 2px 5px;
+
+table.disabled {
+	color: #bcbcbc;
+}
+
+table.disabled caption{
+	background: rgb(216, 216, 216);
 }
