списание счёта фактуры новое. мелочи.

--- a/css/main.css
+++ b/css/main.css
@@ -403,7 +403,7 @@ body {
 	background: url(../images/bg6.jpg) repeat fixed left top;
 	margin: 20px 0;
 	margin-left: -5px;
-	box-shadow: inset 0 0 40px -10px;
+	box-shadow: inset 0 0 50px -10px;
 
 	border-bottom: 1px inset #E7E7E7;
 	border-right: 1px inset #E7E7E7;
@@ -462,4 +462,8 @@ table.std td {
 /*------------------------------------------------*/
 table.canhide caption {
 	cursor: pointer;
+}
+
+.ui-dialog {
+	display: none;
 }
